--- a/Fichiers/index.html
+++ b/Fichiers/index.html
@@ -29,7 +29,7 @@
         
       <div>
          <textarea row="5" cols="50" type = "text" id = "msgInput"> </textarea>
-         <button id = "sendMsgBtn" style="color:green;display:block">Envoyer</button>
+         <button id = "sendMsgBtn" style="color:green;display:block" onclick="insertData()">Envoyer</button>
           
       </div>
 
@@ -37,8 +37,8 @@
          <div class = "col-md-4 col-md-offset-4 text-center">
             <div class = "panel panel-primary">
                <div class = "panel-heading">Messages Reçus</div>
-               <div id = "chatarea" type = "text" class = "panel-body text-left"></div>
-               <button id = "saveMsgBtn" style="color:green;display:block" onclick="Insert()">Save</button>
+               <textarea id = "chatarea" type = "text" ></textarea>
+               <button id = "saveMsgBtn" style="color:green;display:block" onclick="saveData()">Save</button>
             </div>
          </div>
       </div>
